[gd_scene load_steps=19 format=1]

[ext_resource path="res://scripts/objects/hades.gd" type="Script" id=1]
[ext_resource path="res://res/sprites/Hades death anim.png" type="Texture" id=2]
[ext_resource path="res://res/sprites/hades.png" type="Texture" id=3]
[ext_resource path="res://scenes/objects/feets.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/effects/death_effect.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/sprites/skull.png" type="Texture" id=6]
[ext_resource path="res://res/others/light.png" type="Texture" id=7]
[ext_resource path="res://scenes/hud/elements_label.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/hud/hp.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/effects/blood_particles_effect.tscn" type="PackedScene" id=10]
[ext_resource path="res://res/audio/library.tres" type="SampleLibrary" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 80 )

[sub_resource type="Animation" id=2]

resource/name = "die"
length = 19.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:vframes")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 10 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 2 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 1 ] }
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.3, 0.5, 0.9, 1.1, 1.5, 2.1, 2.3, 3.1, 3.2, 3.7, 4.3, 6.6, 7.3, 7.7, 8, 8.3, 8.6, 8.9, 9.2, 9.5, 9.9, 13 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 1, 2, 1, 2, 1, 2, 1, 2, 1, 3, 4, 5, 6, 7, 8, 6, 7, 8, 6, 7, 6, 8, 9 ] }
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 18.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"red_button" } ] }
tracks/5/type = "value"
tracks/5/path = NodePath("../shutdown:transform/scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0, 14.4, 18.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 100, 100 ) ] }
tracks/6/type = "value"
tracks/6/path = NodePath("../shutdown:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 0, 14.4 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }
tracks/7/type = "value"
tracks/7/path = NodePath("../shutdown:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = { "times":FloatArray( 0, 14.4, 18.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 10.0 ] }
tracks/8/type = "value"
tracks/8/path = NodePath("../sounds:play/play")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = { "times":FloatArray( 0, 0.3, 0.9, 1.5, 2.3, 14.4 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":2, "values":[ "", "glitch2", "glitch2", "glitch2", "glitch2", "shutdown" ] }
tracks/9/type = "value"
tracks/9/path = NodePath("../light:transform/scale")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = { "times":FloatArray( 0, 3.1, 4.3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 2.4, 4 ), Vector2( 2.4, 4 ), Vector2( 3, 1.5 ) ] }
tracks/10/type = "value"
tracks/10/path = NodePath("../light:transform/pos")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = { "times":FloatArray( 0, 3.1, 4.3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( -5.00001, 1.23978e-05 ), Vector2( -5.00001, 1.23978e-05 ), Vector2( 54, 39.0001 ) ] }

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 1 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 3 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 1 ] }
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 5 ] }

[sub_resource type="Animation" id=4]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 3 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 5 ] }
tracks/3/type = "value"
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 1 ] }

[sub_resource type="Animation" id=5]

length = 1.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 2, 3, 4, 3, 4, 3 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 3 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 1 ] }
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 5 ] }

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 277.088

[sub_resource type="ColorRamp" id=7]

offsets = FloatArray( 0.812903, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="hades" type="KinematicBody2D" groups=[ "take_damage" ]]

process/pause_mode = 1
visibility/light_mask = 30
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
damage = 10
on = true
line_color = Color( 0, 1, 0, 1 )
hp = 10

[node name="sprite" type="Sprite" parent="."]

transform/pos = Vector2( -11, 2.38419e-06 )
transform/scale = Vector2( 1, 1.06667 )
texture = ExtResource( 2 )
vframes = 10
frame = 1

[node name="animations" type="AnimationPlayer" parent="sprite"]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/look = SubResource( 4 )
anims/type = SubResource( 5 )
playback/active = true
playback/speed = 1.5
blend_times = [  ]
autoplay = "idle"

[node name="body" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="feets" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 0, 52 )

[node name="radar" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3, 3 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="radar"]

transform/pos = Vector2( 3, 3 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="connect_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 2.0
one_shot = true
autostart = false

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="axe_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="death_effect" parent="." instance=ExtResource( 5 )]

[node name="particles" type="Particles2D" parent="."]

visibility/opacity = 0.4
transform/pos = Vector2( 3, 75 )
config/amount = 5
config/lifetime = 9.0
config/preprocess = 8.0
config/half_extents = Vector2( 60, 0 )
config/texture = ExtResource( 6 )
params/direction = 180.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 1.0
randomness/spin_velocity = 1.0
color/color_ramp = SubResource( 7 )

[node name="light" type="Light2D" parent="."]

transform/pos = Vector2( -5.00001, 1.23978e-05 )
transform/scale = Vector2( 2.4, 4 )
enabled = true
editor_only = false
texture = ExtResource( 7 )
offset = Vector2( 0, 0 )
scale = 2.0
color = Color( 1, 0.515625, 0.515625, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 30
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 0

[node name="elements_label" parent="." instance=ExtResource( 8 )]

visibility/visible = false
transform/pos = Vector2( -1, -98 )

[node name="hp" parent="." instance=ExtResource( 9 )]

visibility/light_mask = 0
rect/scale = Vector2( 1, 1 )
margin/left = -50.0
margin/top = 90.0
margin/right = 40.0
margin/bottom = 110.0

[node name="blood_particles_effect" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 9.53674e-07, 9.53674e-07 )
transform/scale = Vector2( 1.5625, 1.5625 )

[node name="shutdown" type="Node2D" parent="."]

visibility/visible = false
visibility/opacity = 0.0
visibility/light_mask = 0
transform/pos = Vector2( 162, 62 )
transform/scale = Vector2( 1e-05, 1e-05 )
z/z = 50
z/relative = false

[node name="texture" type="TextureFrame" parent="shutdown"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -25.0
margin/top = -25.0
margin/right = 39.0
margin/bottom = 39.0
texture = ExtResource( 7 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0
__meta__ = { "_edit_lock_":true }

[node name="sounds" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 8
config/samples = ExtResource( 11 )
config/pitch_random = 0.1

[connection signal="body_enter" from="radar" to="." method="_on_radar_body_enter"]

[connection signal="body_exit" from="radar" to="." method="_on_radar_body_exit"]


